// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`users GET_USERS_SUCCESS 1`] = `
Array [
  Object {
    "email": "super@email.com",
    "id": 999,
    "is_anonymous": false,
    "is_super": true,
    "personalname": "Super User",
    "roles": Array [
      "participant",
      "super_admin",
      "facilitator",
      "researcher",
    ],
    "username": "super",
  },
  Object {
    "email": null,
    "id": 4,
    "is_anonymous": true,
    "is_super": false,
    "personalname": null,
    "roles": Array [
      "participant",
    ],
    "username": "credible-lyrebird",
  },
  Object {
    "email": "heartfull-cougar@email.com",
    "id": 3,
    "is_anonymous": false,
    "is_super": false,
    "personalname": "Heartfull Cougar",
    "roles": Array [
      "participant",
      "facilitator",
    ],
    "username": "heartfull-cougar",
  },
  Object {
    "email": "perfect-oryx@email.com",
    "id": 5,
    "is_anonymous": false,
    "is_super": false,
    "personalname": "Perfect Oryx",
    "roles": Array [
      "participant",
      "facilitator",
    ],
    "username": "perfect-oryx",
  },
]
`;

exports[`users GET_USERS_SUCCESS 2`] = `
Array [
  Object {
    "email": "super@email.com",
    "id": 999,
    "is_anonymous": false,
    "is_super": true,
    "personalname": "Super User",
    "roles": Array [
      "participant",
      "super_admin",
      "facilitator",
      "researcher",
    ],
    "username": "super",
  },
  Object {
    "email": null,
    "id": 4,
    "is_anonymous": true,
    "is_super": false,
    "personalname": null,
    "roles": Array [
      "participant",
    ],
    "username": "credible-lyrebird",
  },
  Object {
    "email": "heartfull-cougar@email.com",
    "id": 3,
    "is_anonymous": false,
    "is_super": false,
    "personalname": "Heartfull Cougar",
    "roles": Array [
      "participant",
      "facilitator",
    ],
    "username": "heartfull-cougar",
  },
  Object {
    "email": "perfect-oryx@email.com",
    "id": 5,
    "is_anonymous": false,
    "is_super": false,
    "personalname": "Perfect Oryx",
    "roles": Array [
      "participant",
      "facilitator",
    ],
    "username": "perfect-oryx",
  },
]
`;

exports[`users GET_USERS_SUCCESS 3`] = `
Object {
  "3": Object {
    "email": "heartfull-cougar@email.com",
    "id": 3,
    "is_anonymous": false,
    "is_super": false,
    "personalname": "Heartfull Cougar",
    "roles": Array [
      "participant",
      "facilitator",
    ],
    "username": "heartfull-cougar",
  },
  "4": Object {
    "email": null,
    "id": 4,
    "is_anonymous": true,
    "is_super": false,
    "personalname": null,
    "roles": Array [
      "participant",
    ],
    "username": "credible-lyrebird",
  },
  "5": Object {
    "email": "perfect-oryx@email.com",
    "id": 5,
    "is_anonymous": false,
    "is_super": false,
    "personalname": "Perfect Oryx",
    "roles": Array [
      "participant",
      "facilitator",
    ],
    "username": "perfect-oryx",
  },
  "999": Object {
    "email": "super@email.com",
    "id": 999,
    "is_anonymous": false,
    "is_super": true,
    "personalname": "Super User",
    "roles": Array [
      "participant",
      "super_admin",
      "facilitator",
      "researcher",
    ],
    "username": "super",
  },
}
`;

exports[`users GET_USERS_SUCCESS 4`] = `
Object {
  "3": Object {
    "email": "heartfull-cougar@email.com",
    "id": 3,
    "is_anonymous": false,
    "is_super": false,
    "personalname": "Heartfull Cougar",
    "roles": Array [
      "participant",
      "facilitator",
    ],
    "username": "heartfull-cougar",
  },
  "4": Object {
    "email": null,
    "id": 4,
    "is_anonymous": true,
    "is_super": false,
    "personalname": null,
    "roles": Array [
      "participant",
    ],
    "username": "credible-lyrebird",
  },
  "5": Object {
    "email": "perfect-oryx@email.com",
    "id": 5,
    "is_anonymous": false,
    "is_super": false,
    "personalname": "Perfect Oryx",
    "roles": Array [
      "participant",
      "facilitator",
    ],
    "username": "perfect-oryx",
  },
  "999": Object {
    "email": "super@email.com",
    "id": 999,
    "is_anonymous": false,
    "is_super": true,
    "personalname": "Super User",
    "roles": Array [
      "participant",
      "super_admin",
      "facilitator",
      "researcher",
    ],
    "username": "super",
  },
}
`;

exports[`users GET_USERS_SUCCESS dedupe 1`] = `
Array [
  Object {
    "email": "super@email.com",
    "id": 999,
    "is_anonymous": false,
    "is_super": true,
    "personalname": "Super User",
    "roles": Array [
      "participant",
      "super_admin",
      "facilitator",
      "researcher",
    ],
    "username": "super",
  },
  Object {
    "email": null,
    "id": 4,
    "is_anonymous": true,
    "is_super": false,
    "personalname": null,
    "roles": Array [
      "participant",
    ],
    "username": "credible-lyrebird",
  },
  Object {
    "email": "heartfull-cougar@email.com",
    "id": 3,
    "is_anonymous": false,
    "is_super": false,
    "personalname": "Heartfull Cougar",
    "roles": Array [
      "participant",
      "facilitator",
    ],
    "username": "heartfull-cougar",
  },
  Object {
    "email": "perfect-oryx@email.com",
    "id": 5,
    "is_anonymous": false,
    "is_super": false,
    "personalname": "Perfect Oryx",
    "roles": Array [
      "participant",
      "facilitator",
    ],
    "username": "perfect-oryx",
  },
]
`;

exports[`users GET_USERS_SUCCESS dedupe 2`] = `
Array [
  Object {
    "email": "super@email.com",
    "id": 999,
    "is_anonymous": false,
    "is_super": true,
    "personalname": "Super User",
    "roles": Array [
      "participant",
      "super_admin",
      "facilitator",
      "researcher",
    ],
    "username": "super",
  },
  Object {
    "email": null,
    "id": 4,
    "is_anonymous": true,
    "is_super": false,
    "personalname": null,
    "roles": Array [
      "participant",
    ],
    "username": "credible-lyrebird",
  },
  Object {
    "email": "heartfull-cougar@email.com",
    "id": 3,
    "is_anonymous": false,
    "is_super": false,
    "personalname": "Heartfull Cougar",
    "roles": Array [
      "participant",
      "facilitator",
    ],
    "username": "heartfull-cougar",
  },
  Object {
    "email": "perfect-oryx@email.com",
    "id": 5,
    "is_anonymous": false,
    "is_super": false,
    "personalname": "Perfect Oryx",
    "roles": Array [
      "participant",
      "facilitator",
    ],
    "username": "perfect-oryx",
  },
]
`;

exports[`users GET_USERS_SUCCESS dedupe 3`] = `
Object {
  "3": Object {
    "email": "heartfull-cougar@email.com",
    "id": 3,
    "is_anonymous": false,
    "is_super": false,
    "personalname": "Heartfull Cougar",
    "roles": Array [
      "participant",
      "facilitator",
    ],
    "username": "heartfull-cougar",
  },
  "4": Object {
    "email": null,
    "id": 4,
    "is_anonymous": true,
    "is_super": false,
    "personalname": null,
    "roles": Array [
      "participant",
    ],
    "username": "credible-lyrebird",
  },
  "5": Object {
    "email": "perfect-oryx@email.com",
    "id": 5,
    "is_anonymous": false,
    "is_super": false,
    "personalname": "Perfect Oryx",
    "roles": Array [
      "participant",
      "facilitator",
    ],
    "username": "perfect-oryx",
  },
  "999": Object {
    "email": "super@email.com",
    "id": 999,
    "is_anonymous": false,
    "is_super": true,
    "personalname": "Super User",
    "roles": Array [
      "participant",
      "super_admin",
      "facilitator",
      "researcher",
    ],
    "username": "super",
  },
}
`;

exports[`users GET_USERS_SUCCESS dedupe 4`] = `
Object {
  "3": Object {
    "email": "heartfull-cougar@email.com",
    "id": 3,
    "is_anonymous": false,
    "is_super": false,
    "personalname": "Heartfull Cougar",
    "roles": Array [
      "participant",
      "facilitator",
    ],
    "username": "heartfull-cougar",
  },
  "4": Object {
    "email": null,
    "id": 4,
    "is_anonymous": true,
    "is_super": false,
    "personalname": null,
    "roles": Array [
      "participant",
    ],
    "username": "credible-lyrebird",
  },
  "5": Object {
    "email": "perfect-oryx@email.com",
    "id": 5,
    "is_anonymous": false,
    "is_super": false,
    "personalname": "Perfect Oryx",
    "roles": Array [
      "participant",
      "facilitator",
    ],
    "username": "perfect-oryx",
  },
  "999": Object {
    "email": "super@email.com",
    "id": 999,
    "is_anonymous": false,
    "is_super": true,
    "personalname": "Super User",
    "roles": Array [
      "participant",
      "super_admin",
      "facilitator",
      "researcher",
    ],
    "username": "super",
  },
}
`;
